tajo-core-tests/src/test/resources/results/TestSQLAnalyzer/errors/identifier1.result
ERROR: syntax error at or near "1"
LINE 7:   1
          ^